--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
         {% endblock %}
 
         {% block corejs %}
+        <!-- Add your kit code -->
         <script src="https://kit.fontawesome.com/500c21ab59.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
             integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
@@ -52,6 +53,7 @@
                 </div>
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <form method="GET" action="{% url 'products' %}">
+                        {% csrf_token %}
                         <div class="input-group w-100">
                             <input class="form-control border border-black rounded-0" type="text" name="q"
                                 placeholder="Search our site">
@@ -77,9 +79,9 @@
                             </a>
                             <div class="dropdown-menu border-0" aria-labelledby="user-options">
                                 {% if request.user.is_authenticated %}
-                                    {% if request.user.is_superuser %}
-                                        <a href="" class="dropdown-item">Product Management</a>
-                                    {% endif %}
+                                {% if request.user.is_superuser %}
+                                <a href="" class="dropdown-item">Product Management</a>
+                                {% endif %}
                                 <a href="" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                                 {% else %}
